# restapi/doc.go
@@ -1,0 +1,23 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+/*
+Package restapi Szeretetfoldje daily message API
+This is the REST API providing for the Szeretetfoldje daily message app
+
+
+    Schemes:
+      http
+      https
+    Host: localhost
+    BasePath: /api
+    Version: 0.1.0
+
+    Consumes:
+    - application/keyauth.api.v1+json
+
+    Produces:
+    - application/keyauth.api.v1+json
+
+swagger:meta
+*/
+package restapi
